[gd_scene load_steps=12 format=3 uid="uid://dr682qf7yx8v2"]

[ext_resource type="Script" uid="uid://cj8xumhxuvsuy" path="res://HUD/borders/level_manager/wave_indicator.gd" id="1_6b7xa"]
[ext_resource type="Texture2D" uid="uid://c3e0toox5q6ht" path="res://HUD/borders/level_manager/level_wave_indicator.png" id="2_uas5a"]
[ext_resource type="Texture2D" uid="uid://bx2p3h172v7qs" path="res://unit/Zombie/basic_zombie/basic_zombie_head_1.png" id="3_yxwk4"]
[ext_resource type="Texture2D" uid="uid://3fbh2gsmbhvy" path="res://unit/Zombie/basic_zombie/basic_zombie_head_2.png" id="4_m0l13"]
[ext_resource type="Texture2D" uid="uid://kvjln3u0ukk8" path="res://HUD/borders/level_manager/HUGE_WAVE.png" id="5_ndq28"]
[ext_resource type="Texture2D" uid="uid://bkjbuvigw5lfn" path="res://HUD/borders/level_manager/final_wave.png" id="6_gxhsj"]
[ext_resource type="AudioStream" uid="uid://bdp68c0d7epy5" path="res://HUD/borders/level_manager/zombies_are_coming_sfx.mp3" id="7_4oy6j"]

[sub_resource type="Animation" id="Animation_ndq28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HugeWave:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HugeWave:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HugeWave:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(959, 573)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FinalWave:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FinalWave:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(917, 555)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FinalWave:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_gxhsj"]
resource_name = "huge_wave_of_zombies_are_approaching"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HugeWave:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.43333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HugeWave:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0266667, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3.825, 3.825), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HugeWave:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.366667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(959, 573)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FinalWave:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3, 7.89405),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FinalWave:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(917, 555)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FinalWave:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3, 3.26667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4.38, 4.38), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8d40n"]
resource_name = "huge_wave_of_zombies_are_approaching"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HugeWave:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HugeWave:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0266667, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3.825, 3.825), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HugeWave:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.366667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(959, 573)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfp1q"]
_data = {
&"RESET": SubResource("Animation_ndq28"),
&"final_wave": SubResource("Animation_gxhsj"),
&"huge_wave_of_zombies_are_approaching": SubResource("Animation_8d40n")
}

[node name="wave_indicator" type="Node2D"]
z_index = 100
script = ExtResource("1_6b7xa")

[node name="Label" type="Label" parent="."]
offset_left = 1031.0
offset_top = 1011.0
offset_right = 1864.0
offset_bottom = 1080.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "DAY 1-1"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(277, 27)
offset_left = 1598.0
offset_top = 1011.0
offset_right = 1875.0
offset_bottom = 1038.0
mouse_filter = 2
show_percentage = false

[node name="LevelWaveIndicator" type="Sprite2D" parent="ProgressBar"]
position = Vector2(134.5, 27)
scale = Vector2(2.23333, 1.66279)
texture = ExtResource("2_uas5a")

[node name="Node" type="Node2D" parent="ProgressBar"]
position = Vector2(12, 19)
scale = Vector2(0.53, 0.53)

[node name="BasicZombieHead1" type="Sprite2D" parent="ProgressBar/Node"]
position = Vector2(-16, -25)
texture = ExtResource("3_yxwk4")
flip_h = true

[node name="BasicZombieHead2" type="Sprite2D" parent="ProgressBar/Node"]
position = Vector2(-15, 8)
texture = ExtResource("4_m0l13")
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vfp1q")
}

[node name="HugeWave" type="Sprite2D" parent="."]
position = Vector2(959, 573)
texture = ExtResource("5_ndq28")

[node name="FinalWave" type="Sprite2D" parent="."]
visible = false
position = Vector2(917, 555)
texture = ExtResource("6_gxhsj")

[node name="bigwave_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4oy6j")
bus = &"SFX"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_progress_bar_value_changed"]
